fix styling on small screens

--- a/components/ImageUI/ImageUI.module.scss
+++ b/components/ImageUI/ImageUI.module.scss
@@ -23,8 +23,17 @@
 }
 
 .canvas {
-  width: 400px;
-  height: 400px;
+  width: 320px;
+  height: 320px;
+
+  @media screen and (min-width: 425px) {
+    width: 380px;
+    height: 380px;
+  }
+  @media screen and (min-width: 450px) {
+    width: 400px;
+    height: 400px;
+  }
 }
 
 .attribution {
