--- a/components/SidewaysSelector/SidewaysSelector.module.scss
+++ b/components/SidewaysSelector/SidewaysSelector.module.scss
@@ -7,7 +7,11 @@
 
 .field {
   flex: 1;
-  margin: 1rem;
+  margin: 0.8rem;
+  font-size: 0.9rem;
+  @media screen and (min-width: 450px) {
+    font-size: 1rem;
+  }
 }
 
 .optionsWrapper {
@@ -39,9 +43,13 @@
     text-align: center;
     margin: 0 1rem;
     white-space: nowrap;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bolder;
     scroll-snap-align: center;
+
+    @media screen and (min-width: 450px) {
+      font-size: 1.2rem;
+    }
   }
 }
 
