--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: b.$body-font;
   color: b.$black;
+  overflow-x: auto;
 }
 
 a {
